@@ -8,6 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import ru.skypro.homework.dto.AdDTO;
 
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -19,10 +20,9 @@ import java.util.List;
 @RequiredArgsConstructor
 public class AdController {
 
-    @GetMapping
+    @GetMapping("/ads")
     public ResponseEntity<List<AdDTO>> getAllAds() {
-
-        return ResponseEntity.ok(List.of(new AdDTO()));
+        return ResponseEntity.ok(Arrays.asList(new AdDTO()));
     }
 
     @PostMapping
